# gopro-dashboard-overlay

./: .bumpversion.cfg  Makefile  README-PYPI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-test-next-versions.yml  build-test-supported-versions.yml
build-scripts/: map-styles.md
config/: example-map-api-keys.json  ffmpeg-profiles.json
docker/: Dockerfile
docs/maps/: README.md
examples/layout/wunderlinq/: adventure-4k-3840x2160.xml  adventure-4k-3840x2160_map.xml  adventure-v4k-2160x3840.xml
gopro_overlay/: entry.py  geo_render.py  gpx.py  layout_xml.py
tests/: approval.py  test_buffering.py  test_entry.py  test_ffmpeg.py  test_fit.py  test_framemeta.py  test_framemeta_gpx.py  test_gpmd.py  test_gpx.py  test_journey.py  test_mpeg_generation.py
tests-dist/: test_distribution.py  textapproval.py
tests/layout/: test_layout.py  test_layout_xml.py
tests/widgets/: test_widgets.py  test_widgets_asi.py  test_widgets_bar.py  test_widgets_chart.py  test_widgets_circuit.py  test_widgets_compass.py  test_widgets_compass_arrow.py  test_widgets_frame.py  test_widgets_gradient_bar.py  test_widgets_maps.py  test_widgets_msi.py  test_widgets_setup.py
tests/widgets/cairo/: test_widgets_cairo.py  test_widgets_cairo_annotation.py  test_widgets_cairo_background.py  test_widgets_cairo_cap.py  test_widgets_cairo_gauge_donut.py  test_widgets_cairo_gauge_round_needle_annotated.py  test_widgets_cairo_gauge_sector_annotated.py  test_widgets_cairo_needle.py  test_widgets_cairo_scale.py  test_widgets_cairo_simple_gauge.py
